--- a/Strategi-Gila-Menang-Besa-Pola-Paten-Mahjong-Ways-2-2025.html
+++ b/Strategi-Gila-Menang-Besa-Pola-Paten-Mahjong-Ways-2-2025.html
@@ -233,7 +233,7 @@
           <a href="https://medanlink.com/ZF9iHfhH2CPM" rel="nofollow noreferrer" target="_blank">DAFTAR AKUN GACOR</a>
         </div>
         <div class="btn-items">
-          <a href="https://medanlink.com/s1BUgKznefYX" rel="nofollow noreferrer" target="_blank">DAFTAR AKUN PRO</a>
+          <a href="https://medanlink.com/s1BUgKznefYX" rel="nofollow noreferrer" target="_blank">DAFTAR AKUN PROOO</a>
         </div>
       </div>
     </section>
