--- a/Bocoran-Jackpot-Luar-Biasa-Teknik-Rahasia-Bermain-Wild-Bandito-2025.html
+++ b/Bocoran-Jackpot-Luar-Biasa-Teknik-Rahasia-Bermain-Wild-Bandito-2025.html
@@ -211,7 +211,7 @@
           </div>
           <div class='button-wrapper'>
             <a href='https://medanlink.com/ZF9iHfhH2CPM' rel = "nofollow" class='btn-secondary'>AKUN GACOR</a>
-            <a href='https://medanlink.com/s1BUgKznefYX' rel = "nofollow" class='btn-primary'>AKUN PRO</a>
+            <a href='https://medanlink.com/s1BUgKznefYX' rel = "nofollow" class='btn-primary'>AKUN PROOO</a>
           </div>
         </div>
       <br>
@@ -233,7 +233,7 @@
           <a href="https://medanlink.com/ZF9iHfhH2CPM" rel="nofollow noreferrer" target="_blank">DAFTAR AKUN GACOR</a>
         </div>
         <div class="btn-items">
-          <a href="https://medanlink.com/s1BUgKznefYX" rel="nofollow noreferrer" target="_blank">DAFTAR AKUN PRO</a>
+          <a href="https://medanlink.com/s1BUgKznefYX" rel="nofollow noreferrer" target="_blank">DAFTAR AKUN PROOO</a>
         </div>
       </div>
     </section>
